force-app/main/default/objects/vlocity_cmt__AssetPricingAdjustment__c/vlocity_cmt__AssetPricingAdjustment__c.object-meta.xml
<CustomObject>
    <description>DEPRECATED. Use Account Pricing.</description>
    <label>Asset Pricing Adjustment</label>
    <nameField>
        <label>Pricing Adjustment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Pricing Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>