force-app/main/default/objects/vlocity_cmt__AssetPricingAdjustment__c/fields/vlocity_cmt__AssetPricingAdjustmentReferenceId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AssetPricingAdjustmentReferenceId__c</fullName>
    <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
    <label>Asset Pricing Adjustment Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>