force-app/main/default/objects/vlocity_cmt__AssetPricingAdjustment__c/fields/vlocity_cmt__PromotionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PromotionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
    <label>Promotion</label>
    <referenceTo>vlocity_cmt__Promotion__c</referenceTo>
    <relationshipLabel>Asset Pricing Adjustments</relationshipLabel>
    <relationshipName>AssetPricingAdjustments</relationshipName>
    <type>Lookup</type>
</CustomField>