force-app/main/default/objects/vlocity_cmt__AssetPricingAdjustment__c/fields/vlocity_cmt__Sequence__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Sequence__c</fullName>
    <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>